# worldforge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conftest.py
.github/workflows/: build-all.yml  build-pull-request.yml  build-squall.yml  dependency-check.yml  requirements.txt
apps/: CMakeLists.txt
apps/cyphesis/: CMakeLists.txt  README.md  TODO
apps/cyphesis/docs/man/: cycmd.1  cycmd.sgml  cyphesis-tools.1  cyphesis-tools.sgml
apps/cyphesis/src/: CMakeLists.txt
apps/cyphesis/src/client/: BaseClient.cpp  CMakeLists.txt
apps/cyphesis/src/common/: AssetsManager.cpp  CMakeLists.txt  CommAsioClient.h  CommAsioClient_impl.h  DatabaseNull.h  DatabasePostgres.cpp  DatabasePostgres.h  MainLoop.cpp  MainLoop.h  Property.h  Property_impl.h  Storage.cpp  globals.cpp  random.h  system_prefix.cpp
apps/cyphesis/src/modules/: CMakeLists.txt
apps/cyphesis/src/navigation/: Awareness.cpp  Awareness.h  CMakeLists.txt  EntityTracker.h  README.TXT  Steering.cpp  fastlz.c
apps/cyphesis/src/physics/: CMakeLists.txt
apps/cyphesis/src/pythonbase/: CMakeLists.txt  Python_API.cpp  Python_API.h  README.md  WrapperBase.h
apps/cyphesis/src/rules/: CMakeLists.txt
apps/cyphesis/src/rules/ai/python/: CMakeLists.txt
apps/cyphesis/src/server/: AutoImport.cpp  AutoImport.h  CMakeLists.txt  Peer.cpp  Peer.h  ServerRouting.cpp  StorageManager.cpp  server.cpp
apps/cyphesis/src/tools/: AccountContext.cpp  CMakeLists.txt  Interactive.cpp  cycmd.cpp  cydb.cpp  cyexport.cpp  cyimport.cpp  cypasswd.cpp
apps/cyphesis/tests/: CMakeLists.txt
apps/cyphesis/tests/client/: BaseClientTest.cpp
apps/cyphesis/tests/common/: AssetsManagerIntegrationTest.cpp  MissingTableCreationTest.cpp  PythonLogGuardTest.cpp
apps/cyphesis/tests/navigation/: SteeringIntegration.cpp
apps/cyphesis/tests/server/: AccountConnectionIntegration.cpp  AdminTest.cpp  AutoImportTest.cpp  ConnectionTest.cpp  DatabaseFallbackTest.cpp  PhysicalDomainIntegrationTest.cpp  PhysicalDomainSpeedTest.cpp  PossessKeyTest.cpp  RulesetIntegration.cpp  StorageManagerTest.cpp  StorageManagerUnsetPropertyTest.cpp
apps/cyphesis/tests/tools/: AccountContextTest.cpp  CydbTest.cpp  InteractiveCommandTest.cpp  SecurePasswordTest.cpp
apps/cyphesis/tools/: cyphesis.vconf.in
apps/cyphesis/tools/pythondocsgenerator/: CMakeLists.txt
apps/cyphesis/tools/scripts/: make_dist_media.py
apps/ember/: CMakeLists.txt  README.md
apps/ember/data/config/: ogre.cfg  plugins.cfg
apps/ember/docs/: AssetAuthoringWorkflow.md  RayTracingEvaluation.md
apps/ember/src/components/lua/: CMakeLists.txt
apps/ember/src/components/lua/bindings/lua/: CMakeLists.txt
apps/ember/src/components/ogre/lod/: CMakeLists.txt  ClusterLodStrategy.cpp  ClusterLodStrategy.h  LodDefinition.h  LodManager.cpp  LodManager.h  NaniteLodDefinition.cpp  NaniteLodDefinition.h
apps/ember/src/components/ogre/mapping/: CMakeLists.txt
apps/ember/src/domain/: CMakeLists.txt
apps/ember/src/framework/bindings/lua/: CMakeLists.txt
apps/ember/src/framework/bindings/lua/atlas/: CMakeLists.txt
apps/ember/src/framework/bindings/lua/eris/: CMakeLists.txt
apps/ember/src/framework/bindings/lua/varconf/: CMakeLists.txt
apps/ember/src/framework/bindings/lua/wfmath/: CMakeLists.txt
apps/ember/tests/: AutoGraphicsLevelManagerTest.cpp  AvatarMovementTestCase.cpp  AvatarMovementTestCase.h  CMakeLists.txt  ComboboxAdapterTest.cpp  EntityMappingCreatorTest.cpp  EntityMoverRotationTestCase.cpp  EntityMoverRotationTestCase.h  InstancingRenderTestCase.cpp  InstancingRenderTestCase.h  MovementControllerTestCase.cpp  MovementControllerTestCase.h  NestedEntityTestCase.cpp  NestedEntityTestCase.h  ServerSettingsTest.cpp  TestConsoleBackend.cpp  TestEmberServices.cpp  TestFramework.cpp  TestOgreView.cpp  TestTasks.cpp  TestTerrain.cpp  TestTimeFrame.cpp
apps/ember/tools/: ember.tmpl.conf
apps/metaserver/: README  README.md
apps/metaserver/src/server/: CMakeLists.txt  DataObject.cpp  DataObject.hpp  DomainFilter.hpp  MetaServer.cpp  MetaServerHandlerUDP.cpp  MetaServerHandlerUDP.hpp  Network.h  PDNSPipe.cpp  ShutdownException.hpp  TestServer.cpp  main.cpp
apps/metaserver/tests/: CMakeLists.txt  ClientSessionCache_unittest.cpp  DataObject_unittest.cpp  DomainFilter_unittest.cpp  MetaServerHandlerUDP_unittest.cpp  MetaServerPacket_unittest.cpp  MetaServer_unittest.cpp  PacketLogging_integration.cpp
apps/tests/e2e/: _stubs.py  conftest.py  minimal_session.py  test_bow_animation.py  test_minimal_session_utils.py
docs/: system_audit_2024-05.md
libs/atlas/: CMakeLists.txt  README.md
libs/atlas/src/: CMakeLists.txt
libs/eris/: CMakeLists.txt
libs/eris/src/Eris/: View.cpp  (+6 more)
libs/eris/tests/: Account_integrationtest.cpp  CMakeLists.txt  Connection_unittest.cpp  Metaserver_integrationtest.cpp  Metaserver_unittest.cpp  README.md  View_unittest.cpp  clientConnection.cpp  clientConnection.h  commander.cpp  commander.h  controller.cpp  controller.h
libs/mercator/: CMakeLists.txt  README.md
libs/mercator/tests/: AreaShaderHoletest.cpp  CMakeLists.txt  Foresttest.cpp  Intersecttest.cpp
libs/squall/: CMakeLists.txt
libs/squall/tests/: CMakeLists.txt  PBRTextureSyncTest.cpp
libs/varconf/: CMakeLists.txt
libs/varconf/tests/: CMakeLists.txt  README.md  conftest.cpp  variable_bool.cpp  variable_signedness.cpp
libs/wfmath/: CMakeLists.txt  TODO
libs/wfmath/tests/: CMakeLists.txt  ball_test.cpp  barycenter_test.cpp  const_test.cpp  general_test.h  intersect_unknown_test.cpp  intstring_test.cpp  line_test.cpp  point_test.cpp  polygon_test.cpp  probability_test.cpp  quaternion_test.cpp  randgen_test.cpp  rotmatrix_test.cpp  shape_test.cpp  shape_test.h  timestamp_test.cpp  vector_test.cpp
libs/wfmath/tests/atlas/: atlas_0_4_test.cpp  atlas_0_7_test.cpp
tests/: test_atlas_import.py
tools/: check_dependencies.py
tools/nanite/: MeshPreprocessor.cpp
tools/nanite/tests/: CMakeLists.txt  MeshPreprocessorTest.cpp
tools/performance/: ProfilerCLI.cpp
tools/performance/tests/: CMakeLists.txt  ProfilerCLITest.cpp
tools/tests/: test_check_dependencies.py
(+139 files in other folders)
